Added new API for asking questions in Chat AI

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ SMTP_USERNAME=TIC
 SMTP_PASSWORD=bewl xfqr gjtl gved
 FROM=kalpanatamatam1218@gmail.com
 BUCKET_NAME=ticimages
+PYTHON_SERVICE_URL=http://54.158.101.113:8000
