--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
+    "stream": "^0.0.3",
     "validator": "^13.12.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
